--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "homepage": "https://github.com/OntologyCommunityDevelopers/ontology-dapi",
   "devDependencies": {
     "@types/node": "^8.5.2",
+    "@types/promise-timeout": "^1.3.0",
     "@types/uuid": "^3.4.3",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
@@ -54,6 +55,7 @@
   },
   "dependencies": {
     "@ont-community/window-post-message-proxy": "^0.2.13",
+    "promise-timeout": "^1.3.0",
     "uuid": "^3.3.2",
     "webextension-polyfill-ts": "^0.8.7"
   }
