--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontology-dapi",
-  "version": "0.3.9",
+  "version": "0.3.10",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/types/index.d.ts",
@@ -33,6 +33,8 @@
   },
   "homepage": "https://github.com/OntologyCommunityDevelopers/ontology-dapi",
   "devDependencies": {
+    "@types/bs58": "^3.0.30",
+    "@types/crypto-js": "^3.1.43",
     "@types/node": "^8.5.2",
     "@types/promise-timeout": "^1.3.0",
     "@types/uuid": "^3.4.3",
@@ -55,6 +57,8 @@
   },
   "dependencies": {
     "@ont-community/window-post-message-proxy": "^0.2.14",
+    "bs58": "^4.0.1",
+    "crypto-js": "^3.1.9-1",
     "promise-timeout": "^1.3.0",
     "uuid": "^3.3.2",
     "webextension-polyfill-ts": "^0.8.7"
