--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
   },
   "dependencies": {
     "@ont-community/window-post-message-proxy": "^0.2.14",
-    "bs58": "^4.0.1",
+    "base-x": "^3.0.5",
+    "typedarray-to-buffer": "^3.1.5",
     "crypto-js": "^3.1.9-1",
     "promise-timeout": "^1.3.0",
     "uuid": "^3.3.2",
