--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ont-dev/ontology-dapi",
-  "version": "0.5.5-alpha.3",
+  "version": "0.5.5",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/types/index.d.ts",
