replace OntologyCommunityDevelopers with ontio

--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git://github.com/OntologyCommunityDevelopers/ontology-dapi"
+    "url": "git://github.com/ontio/ontology-dapi"
   },
   "bugs": {
-    "url": "https://github.com/OntologyCommunityDevelopers/ontology-dapi/issues"
+    "url": "https://github.com/ontio/ontology-dapi/issues"
   },
-  "homepage": "https://github.com/OntologyCommunityDevelopers/ontology-dapi",
+  "homepage": "https://github.com/ontio/ontology-dapi",
   "devDependencies": {
     "@types/bs58": "^3.0.30",
     "@types/crypto-js": "^3.1.43",
