--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ont-dev/ontology-dapi",
-  "version": "0.7.2",
+  "version": "0.7.3",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/types/index.d.ts",
@@ -58,11 +58,13 @@
   },
   "dependencies": {
     "@ont-community/window-post-message-proxy": "^0.2.14",
+    "@types/webextension-polyfill": "^0.10.7",
     "base-x": "^3.0.5",
-    "typedarray-to-buffer": "^3.1.5",
     "crypto-js": "^3.1.9-1",
     "promise-timeout": "^1.3.0",
+    "typedarray-to-buffer": "^3.1.5",
     "uuid": "^3.3.2",
+    "webextension-polyfill": "^0.10.0",
     "webextension-polyfill-ts": "^0.8.7"
   }
 }
